tests/macros/int/extension.stderr
error: option `extension` does not exist for kind `int`
 --> $DIR/extension.rs:2:41
  |
2 |     let q = discourse::questions![Int { extension: todo!() }];
  |                                         ^^^^^^^^^
