tests/macros/int/extension.rs
fn main() {
    let q = discourse::questions![Int { extension: todo!() }];
}
